--- a/faq.html
+++ b/faq.html
@@ -671,13 +671,13 @@
     .faq-slideshow-container::before {
       left: 0;
       /* Neuer Farbverlauf: außen sanft, dann schneller clean */
-      background: linear-gradient(to right, #ffffff 25%, rgba(255,255,255,0.98) 30%, rgba(255,255,255,0.96) 35%, rgba(255,255,255,0.93) 40%, rgba(255,255,255,0.89) 45%, rgba(255,255,255,0.84) 50%, rgba(255,255,255,0.78) 55%, rgba(255,255,255,0.71) 60%, rgba(255,255,255,0.63) 65%, rgba(255,255,255,0.54) 70%, rgba(255,255,255,0.44) 75%, rgba(255,255,255,0.33) 80%, rgba(255,255,255,0.22) 85%, rgba(255,255,255,0.11) 90%, rgba(255,255,255,0.03) 95%, rgba(255,255,255,0) 100%);
+      background: linear-gradient(to right, #ffffff 25%, rgba(255,255,255,0.99) 27.5%, rgba(255,255,255,0.98) 30%, rgba(255,255,255,0.97) 32.5%, rgba(255,255,255,0.96) 35%, rgba(255,255,255,0.94) 37.5%, rgba(255,255,255,0.92) 40%, rgba(255,255,255,0.90) 42.5%, rgba(255,255,255,0.88) 45%, rgba(255,255,255,0.85) 47.5%, rgba(255,255,255,0.82) 50%, rgba(255,255,255,0.79) 52.5%, rgba(255,255,255,0.76) 55%, rgba(255,255,255,0.72) 57.5%, rgba(255,255,255,0.68) 60%, rgba(255,255,255,0.64) 62.5%, rgba(255,255,255,0.60) 65%, rgba(255,255,255,0.55) 67.5%, rgba(255,255,255,0.50) 70%, rgba(255,255,255,0.45) 72.5%, rgba(255,255,255,0.40) 75%, rgba(255,255,255,0.35) 77.5%, rgba(255,255,255,0.30) 80%, rgba(255,255,255,0.25) 82.5%, rgba(255,255,255,0.20) 85%, rgba(255,255,255,0.15) 87.5%, rgba(255,255,255,0.10) 90%, rgba(255,255,255,0.07) 92.5%, rgba(255,255,255,0.04) 95%, rgba(255,255,255,0.01) 97.5%, rgba(255,255,255,0) 100%);
     }
 
     .faq-slideshow-container::after {
       right: 0;
       /* Neuer Farbverlauf: außen sanft, dann schneller clean */
-      background: linear-gradient(to left, #ffffff 25%, rgba(255,255,255,0.98) 30%, rgba(255,255,255,0.96) 35%, rgba(255,255,255,0.93) 40%, rgba(255,255,255,0.89) 45%, rgba(255,255,255,0.84) 50%, rgba(255,255,255,0.78) 55%, rgba(255,255,255,0.71) 60%, rgba(255,255,255,0.63) 65%, rgba(255,255,255,0.54) 70%, rgba(255,255,255,0.44) 75%, rgba(255,255,255,0.33) 80%, rgba(255,255,255,0.22) 85%, rgba(255,255,255,0.11) 90%, rgba(255,255,255,0.03) 95%, rgba(255,255,255,0) 100%);
+      background: linear-gradient(to left, #ffffff 25%, rgba(255,255,255,0.99) 27.5%, rgba(255,255,255,0.98) 30%, rgba(255,255,255,0.97) 32.5%, rgba(255,255,255,0.96) 35%, rgba(255,255,255,0.94) 37.5%, rgba(255,255,255,0.92) 40%, rgba(255,255,255,0.90) 42.5%, rgba(255,255,255,0.88) 45%, rgba(255,255,255,0.85) 47.5%, rgba(255,255,255,0.82) 50%, rgba(255,255,255,0.79) 52.5%, rgba(255,255,255,0.76) 55%, rgba(255,255,255,0.72) 57.5%, rgba(255,255,255,0.68) 60%, rgba(255,255,255,0.64) 62.5%, rgba(255,255,255,0.60) 65%, rgba(255,255,255,0.55) 67.5%, rgba(255,255,255,0.50) 70%, rgba(255,255,255,0.45) 72.5%, rgba(255,255,255,0.40) 75%, rgba(255,255,255,0.35) 77.5%, rgba(255,255,255,0.30) 80%, rgba(255,255,255,0.25) 82.5%, rgba(255,255,255,0.20) 85%, rgba(255,255,255,0.15) 87.5%, rgba(255,255,255,0.10) 90%, rgba(255,255,255,0.07) 92.5%, rgba(255,255,255,0.04) 95%, rgba(255,255,255,0.01) 97.5%, rgba(255,255,255,0) 100%);
     }
 
     .faq-slideshow-wrapper {
