--- a/index.html
+++ b/index.html
@@ -1206,7 +1206,7 @@
 
     /* Responsive Anpassungen für das Menü */
     @media (max-width: 768px) {
-      body {
+      html, body {
         overflow-x: hidden; /* Verhindert horizontales Scrollen auf dem Handy */
       }
 
