--- a/index.html
+++ b/index.html
@@ -1601,6 +1601,7 @@
         opacity: 0.1; /* Logo noch transparenter oder ggf. ausblenden (display: none;) */
         margin-bottom: 30px; /* Abstand zum nächsten Element */
         order: 2; /* Reihenfolge ändern, falls gewünscht, z.B. nach dem Text */
+        overflow-x: hidden; /* Verhindert, dass das Logo horizontales Scrollen verursacht */
       }
 
       .footer-logo .bazara-style {
