--- a/index.html
+++ b/index.html
@@ -1210,6 +1210,11 @@
         overflow-x: hidden; /* Verhindert horizontales Scrollen auf dem Handy */
       }
 
+      /* Linken Abstand des Logos im Menü auf Mobilgeräten reduzieren */
+      .menu-logo .logo-link {
+        padding-left: 0; /* Entfernt den zusätzlichen linken Abstand des Logos */
+      }
+
       .main-nav .nav-links {
         display: flex;
         flex-direction: column;
@@ -1266,7 +1271,7 @@
 
       /* Hero Section Anpassungen für Mobilgeräte */
       .hero-section h1 {
-        font-size: 56px; /* Deutlich kleinere Schriftgröße für h1 */
+        font-size: 40px; /* Schriftgröße für h1 noch weiter reduziert */
         margin-bottom: 15px; /* Angepasster Abstand */
       }
 
@@ -1281,6 +1286,8 @@
         line-height: 1.4; /* Ggf. Zeilenhöhe anpassen */
         margin-top: 10px; /* Angepasster Abstand oben */
         margin-bottom: 20px; /* Angepasster Abstand unten */
+        padding-left: 15px; /* Rand links für h2 hinzugefügt */
+        padding-right: 15px; /* Rand rechts für h2 hinzugefügt */
       }
 
       /* Splash Screen Anpassungen für Mobilgeräte */
