--- a/index.html
+++ b/index.html
@@ -1297,6 +1297,7 @@
         line-height: 1.4; /* Ggf. Zeilenhöhe anpassen */
         margin-top: 10px; /* Angepasster Abstand oben */
         margin-bottom: 20px; /* Angepasster Abstand unten */
+        padding-right: 20px; /* Rechten Innenabstand für h2 auf Mobilgeräten wiederherstellen */
         /* text-align: left; wird von .hero-section geerbt */
         /* padding-left und padding-right sind nicht mehr nötig, da .hero-section Padding hat */
       }
