--- a/index.html
+++ b/index.html
@@ -1288,7 +1288,7 @@
       }
 
       .dynamic-h1-line {
-        height: 1.2em; 
+        height: 1.3em; /* Angepasst an Desktop-Wert für Unterlängen */
         width: auto; /* Passt sich dem Inhalt an */
         left: 0;     /* Linksbündig zum Elternelement (h1) */
         transform: none; /* Keine horizontale Zentrierung mehr */
