--- a/index.html
+++ b/index.html
@@ -1485,7 +1485,7 @@
 
       /* Höhe der animierten vertikalen Linien anpassen */
       .sprechzeiten-tabelle.start-animation thead th:not(:first-child)::before {
-        height: 250px; /* Reduzierte Höhe für mobile Ansicht, ggf. anpassen */
+        height: 350px; /* Erhöhte Höhe für mobile Ansicht, ggf. anpassen */
       }
 
       .sprechzeiten-hinweis {
